--- a/app/src/main/res/raw/index.html
+++ b/app/src/main/res/raw/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <body onload="JavaScript:timedRefresh();">
-            <img src=’camera.jpg’ height=’50%’ id=’camerainput’>
+            <img src='camera.jpg' height='50%' id='camerainput'>
             <a href="/forward">Forward</a><br>
             <a href="/backward">Backward</a><br>
             <a href="/left">Left</a><br>
